@@ -1,3 +1,11 @@
+2010-12-12  Jari Aalto  <jari.aalto@cante.net>
+
+	* tiny/tinydesk.el (turn-on-tinydesk-mode): Add
+	autoload.
+	(turn-off-tinydesk-mode): Add autoload.
+	(turn-on-tinydesk-mode-maybe): Rewrite.
+	(tinydesk-file-p): New.
+
 2010-12-12 Sun  Jari Aalto  <jari.aalto@cante.net>
 
 	* tiny/tinyeat.el (tinyeat-install-default-bindings): Define
